--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link rel="dns-prefetch" href="//s.w.org" />
         <link rel="https://api.w.org/" href="/wp-json/" />
         <link rel="canonical" href="/" />
-        <link rel="shortlink" href="/" />+
+        <link rel="shortlink" href="/" />
         <!-- <link rel="icon" href="img/favicon.ico" /> -->
         
         <!-- WPHEAD -->
@@ -28,22 +28,22 @@
         <link
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
-        />2
+        />
     </head>
     <body class="home" id="top" itemscope itemtype="http://schema.org/WebPage">
         <!-- header -->
         <header id="header-container">
             <section class="nav-container">
-                <div class="logo">
+                <!-- <div class="logo">
                     <figure class="logo">
                         <a href="<?= get_site_url(); ?>/" class="link-logo">
                             <picture>
-                                <source type="image/svg+xml" srcset="img/turner-medical-arts-logo.svg">
-                                <img src="img/turner-medical-arts-logo.svg" alt="Lifted" class="" width="174" height="58">
+                                <source type="image/svg+xml" srcset="img/lifted-logo.svg">
+                                <img src="img/lifted-logo.svg" alt="Lifted" class="" width="174" height="58">
                             </picture>
                         </a>
                     </figure>
-                </div>
+                </div> -->
                 <nav class="navdiv" aria-label="main navigation" role="navigation">
                     <span class="closebutton menu-button">
                         <div class="bars" aria-label="menu" aria-haspopup="true" aria-expanded="false" tabindex="0"
@@ -60,7 +60,7 @@
                                 <li role="menuitem" class="menu-item hasdropdown ">
                                     <a href="<?= get_site_url(); ?>/about/" class="menulink">
                                         <span class="menutext">
-                                            ABOUT
+                                            ABOUT US
                                         </span>
                                     </a>
                                     <div class="dropmenu norm">
@@ -94,7 +94,7 @@
                                 <li role="menuitem" class="menu-item hasdropdown ">
                                     <a href="<?= get_site_url(); ?>/aesthetics/" class="menulink">
                                         <span class="menutext">
-                                            AESTHETICS
+                                            CONCERNS
                                         </span>
                                     </a>
                                     <div class="dropmenu norm">
@@ -119,7 +119,7 @@
                                 <li role="menuitem" class="menu-item hasdropdown ">
                                         <a href="<?= get_site_url(); ?>/plastic-surgery/" class="menulink">
                                         <span class="menutext">
-                                            PLASTIC SURGERY
+                                            TREATMENTS
                                         </span>
                                     </a>
                                     <div class="dropmenu norm">
@@ -147,16 +147,28 @@
                                 <li role="menuitem" class="menu-item">
                                 <a href="<?= get_site_url(); ?>/gyn-sexual-health/" class="menulink">
                                         <span class="menutext">
-                                            GYN / SEXUAL HEALTH
+                                            SHOP
                                         </span>
                                     </a>
                                 </li>
+
+                                <!-- Logo -->
+                                <div class="logo">
+                                  <figure class="logo">
+                                      <a href="<?= get_site_url(); ?>/" class="link-logo">
+                                          <picture>
+                                              <source type="image/svg+xml" srcset="img/lifted-logo.svg">
+                                              <img src="img/lifted-logo.svg" alt="Lifted" class="" width="174" height="58">
+                                          </picture>
+                                      </a>
+                                  </figure>
+                                </div>
 
                                 <!-- menu item -->
                                 <li role="menuitem" class="menu-item hasdropdown ">
                                   <a href="<?= get_site_url(); ?>/concerns/" class="menulink">
                                           <span class="menutext">
-                                              CONCERNS
+                                              BLOGS
                                           </span>
                                       </a>
                                       <div class="dropmenu norm">
@@ -181,7 +193,7 @@
                                 <li role="menuitem" class="menu-item ">
                                 <a href="<?= get_site_url(); ?>/gallery/" class="menulink">
                                     <span class="menutext">
-                                        GALLERY
+                                        MEMBERSHPS
                                     </span>
                                 </a>
                                 </li>
@@ -190,19 +202,11 @@
                                 <li role="menuitem" class="menu-item ">
                                   <a href="<?= get_site_url(); ?>/shop/" class="menulink">
                                       <span class="menutext">
-                                          SHOP
+                                          THE STUDIO
                                       </span>
                                   </a>
                                 </li>
 
-                                <!-- menu item -->
-                                <li role="menuitem" class="menu-item ">
-                                  <a href="<?= get_site_url(); ?>/patient-info/" class="menulink">
-                                      <span class="menutext">
-                                          PATIENT INFO
-                                      </span>
-                                  </a>
-                                </li>
 
                                 <!-- menu item -->
                                 <li role="menuitem" class="menu-item blue-text">
