--- a/index.html
+++ b/index.html
@@ -60,7 +60,14 @@
                 </span>
                 <div class="navbaritems ">
                     <div class="menucontent">
+
+                      <div class="search">
+                        <a href="#search-link" class="search-link">
+                          <img src="img/search-white.svg" alt="">
+                        </a>
+                      </div>
                         <ul class="items" role="menubar">
+
                             <!-- menu item -->
                             <li role="menuitem" class="menu-item hasdropdown ">
                                 <a href="<?= get_site_url(); ?>/about/" class="menulink">
