hero section done

--- a/index.html
+++ b/index.html
@@ -250,21 +250,40 @@
             <div class="container">
                 <div class="content">
                     <div class="rvl">
-                        <h1 class="sec-title">
-                            Restore Your Body, Rejuvenate Your Skin
-                        </h1>
+                      <picture>
+                        <source media="(min-width: 576px)" srcset="img/lifted-logo-hero.png">
+                        <img src="img/lifted-logo-hero.png" alt="" class="pic">
+                      </picture>
                     </div>
                     <div class="rvl">
-                        <p>Your trusted local dermatologist is also your source for all your cosmetic procedure needs. Come to Title for <a href="" class="alink">non-surgical fat reduction</a>, <a href="" class="alink">acne</a>, and <a href="" class="alink">acne scarring reduction</a>, skin tightening, <a href="" class="alink">dermal fillers</a>, and more.</p>
-                    </div>
-                    <div class="rvl">
-                        <div class="btn-container">
-                            <a href="" class="ui-btn">
-                                REQUEST APPOINTMENT
-                            </a>
-                        </div>
+                        <p>Located in Seattle, WA</p>
                     </div>
                 </div>
+            </div>
+            <div class="arrow-btn">
+              <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="33.139" height="27.877" viewBox="0 0 33.139 27.877">
+                  <path id="Path_1" data-name="Path 1" d="M975.6,1021.137l15.1,21.922,13.865-21.922" transform="translate(-973.54 -1019.718)" fill="none" stroke="#fff" stroke-width="5" opacity="0.999"/>
+                </svg>                
+              </a>
+            </div>
+
+            <div class="hero-social">
+              <a href="#" class="social-link">
+                <img src="img/facebook.svg" alt="Facebook icon">                
+              </a>
+              <a href="#" class="social-link">
+                <img src="img/instagram.svg" alt="Instagram icon">
+              </a>
+              <a href="#" class="social-link">
+                <img src="img/google.svg" alt="Google icon">
+              </a>
+              <a href="#" class="social-link">
+                <img src="img/yelp.svg" alt="Yelp icon">
+              </a>
+              <a href="#" class="social-link">
+                <img src="img/maps-and-flags.svg" alt="Maps icon">            
+              </a>
             </div>
         </section>
 
