--- a/index.html
+++ b/index.html
@@ -287,6 +287,108 @@
             </div>
         </section>
 
+        <section class="sculptsure">
+          <div class="container">
+              <div class="content">
+                  <div class="left-col">
+                    <picture class="">
+                      <source media="(min-width: 576px)" srcset="img/sculptsure@2x.png">
+                      <img src="img/sculptsure@2x.png" alt="Fit woman in active clothes" class="pic"> 
+                    </picture>
+                  </div>
+                  <div class="right-col">
+                    <div class="right-content">
+                      <div class="rvl">
+                        <h3 class="sec-title">
+                          Body
+                        </h3>
+                      </div>
+                      <div class="rvl">
+                        <h1 class="sec-title">
+                          SCULPSURE
+                        </h1>
+                      </div>
+  
+                      <div class="rvl">
+                        <p>
+                          A non-invasive way to ditch stubborn fat? We think yes! SculpSure<sup>®</sup> is a laser device that disrupts stubborn fat without liposuction or surgery. It takes only 25 minutes to destroy 24% of targeted fat cells – No downtime needed!
+                        </p>
+  
+                      </div>
+
+                      <div class="btn-container rvl">
+                        <a href="#schedulewithus" class="ui-btn ">
+                            <span>Learn More</span>  
+                            <div class="icon">
+                              <img src="img/arrow.svg" alt="arrow">
+                            </div>  
+                        </a>
+                      </div>
+  
+                    </div>
+
+                    <div class="qoute-col">
+                      <span class="image-wrapper"> <img src="img/qoute-left.svg" alt=""> </span>
+                      <div class="rvl">
+                        <div class="text-content">
+                          <p>Both times I came into the office after work, had my treatments, and then went out to dinner right after. I had no swelling no redness and really the only reminder that I had of the treatment was a little bit of tenderness the very next day and that was it.
+                          </p>
+    
+                          <p class="reviewer">
+                            – Valerie
+                          </p>
+                        </div>
+
+                      </div>
+                      <span class="image-wrapper-right"> <img src="img/qoute-right.svg" alt=""> </span>
+                    </div>
+                  </div>
+
+
+              </div>
+
+          </div>
+        </section>
+
+        <section class="business">
+          <div class="img">
+            <picture class="">
+              <source media="(min-width: 576px)" srcset="img/business-bg@2x.jpg">
+              <img src="img/business-bg@2x.jpg" alt="office" class="pic"> 
+            </picture>
+          </div>
+          <div class="container">
+              <div class="content">
+                <div class="rvl">
+                  <h3>
+                    UNIQUE
+                  </h3>
+                </div>
+                <div class="rvl">
+                  <h2>
+                    BUSINESS
+                  </h2>
+                </div>
+                <div class="rvl">
+                  <p>
+                    Why Lifted? It’s simple. There is no better investment of energy, time, or money than in yourself. At Lifted Beauty + Wellness, we believe ‘beauty’ applies to anyone and everyone because it is no longer defined in how our parents and grandparents viewed it.
+                  </p>
+                </div>
+
+                <div class="btn-container rvl">
+                  <a href="#schedulewithus" class="ui-btn ui-btn-white">
+                      <span>Learn More</span>  
+                      <div class="icon">
+                        <img src="img/arrow.svg" alt="arrow">
+                      </div>  
+                  </a>
+                </div>
+              </div>
+
+          </div>
+        </section>
+
+
         <section class="textblock">
             <div class="container">
                 <div class="content">
