slider team complete

--- a/index.html
+++ b/index.html
@@ -388,6 +388,120 @@
           </div>
         </section>
 
+        <section class="team">
+          <div class="img">
+            <picture class="">
+              <source media="(min-width: 576px)" srcset="img/team-slider-bg@2x.jpg">
+              <img src="img/team-slider-bg@2x.jpg" alt="" class="pic"> 
+            </picture>
+          </div>
+          <div class="container">
+              <div class="content">
+                <div class="rvl">
+                  <h3>
+                    Meet the
+                  </h3>
+                </div>
+                <div class="rvl">
+                  <h2>
+                    Team
+                  </h2>
+                </div>
+                <div class="slider-container">
+                  <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+  
+                        <div class="swiper-slide">
+                          <div class="img-container">
+                            <picture>
+                              <source media="(min-width: 576px)" srcset="img/beth-colombo.png">
+                              <img src="img/beth-colombo.png" alt="">
+                            </picture>
+                          </div>
+                          <h3>
+                            Beth Colombo
+                          </h3>
+                          <p>
+                            Owner
+                          </p>
+                        </div>
+
+                        <div class="swiper-slide">
+                          <div class="img-container">
+                            <picture>
+                              <source media="(min-width: 576px)" srcset="img/dr-patrick-fox.png">
+                              <img src="img/dr-patrick-fox.png" alt="">
+                            </picture>
+                          </div>
+                          <h3>
+                            Dr. Patrick Fox
+                          </h3>
+                          <p>
+                            Medical Director
+                          </p>
+                        </div>
+  
+                        <div class="swiper-slide">
+                          <div class="img-container">
+                            <picture>
+                              <source media="(min-width: 576px)" srcset="img/natasha-hardin.png">
+                              <img src="img/natasha-hardin.png" alt="">
+                            </picture>
+                          </div>
+                          <h3>
+                            Natasha Hardin
+                          </h3>
+                          <p>
+                            Masater Aesthetician
+                          </p>
+                        </div>
+
+                        <div class="swiper-slide">
+                          <div class="img-container">
+                            <picture>
+                              <source media="(min-width: 576px)" srcset="img/ingalisa-wickstrom.png">
+                              <img src="img/ingalisa-wickstrom.png" alt="">
+                            </picture>
+                          </div>
+                          <h3>
+                            Ingalisa Wickstrom
+                          </h3>
+                          <p>
+                            Master Aesthetician
+                          </p>
+                        </div>
+
+                        
+
+                    </div>
+
+                    <div class="swiper-button-next">
+                      <div class="icon">
+                        <img src="img/arrow.svg" alt="arrow">
+                      </div>  
+                    </div>
+                    <div class="swiper-button-prev">
+                      <div class="icon">
+                        <img src="img/arrow-prev.svg" alt="arrow">
+                      </div>  
+                    </div>
+                  </div>
+                </div>
+
+                <div class="btn-container rvl">
+                  <a href="#schedulewithus" class="ui-btn">
+                      <span>View More</span>  
+                      <div class="icon">
+                        <img src="img/arrow.svg" alt="arrow">
+                      </div>  
+                  </a>
+                </div>
+              </div>
+
+          </div>
+        </section>
+
+
 
         <section class="textblock">
             <div class="container">
