virtual section complete

--- a/index.html
+++ b/index.html
@@ -502,6 +502,46 @@
         </section>
 
 
+        <section class="virtual">
+          <div class="img">
+            <picture class="">
+              <source media="(min-width: 576px)" srcset="img/virtual-visit-bg@2x.jpg">
+              <img src="img/virtual-visit-bg@2x.jpg" alt="" class="pic"> 
+            </picture>
+          </div>
+          <div class="container">
+              <div class="content">
+                <!-- <div class="rvl">
+                  <h3>
+                    UNIQUE
+                  </h3>
+                </div> -->
+                <div class="rvl">
+                  <h2>
+                    VIRTUAL VISIT
+                  </h2>
+                </div>
+                <div class="rvl">
+                  <p>
+                    Get the care you deserve in the comfort of your own home. Our virtual visits are perfect for quick beauty tips, consultations, and follow-ups after procedures. Get in touch and meet us online now.
+
+                  </p>
+                </div>
+
+                <div class="btn-container rvl">
+                  <a href="#schedulewithus" class="ui-btn">
+                      <span>Connect</span>  
+                      <div class="icon">
+                        <img src="img/arrow.svg" alt="arrow">
+                      </div>  
+                  </a>
+                </div>
+              </div>
+
+          </div>
+        </section>
+
+
 
         <section class="textblock">
             <div class="container">
