hydrafacial desktop complete

--- a/index.html
+++ b/index.html
@@ -541,6 +541,114 @@
           </div>
         </section>
 
+        <section class="hydrafacial">
+          <div class="img">
+            <picture class="">
+              <source media="(min-width: 576px)" srcset="img/hydrafacial-bg@2x.jpg">
+              <img src="img/hydrafacial-bg@2x.jpg" alt="" class="pic"> 
+            </picture>
+          </div>
+          <div class="container">
+              <div class="content">
+                <div class="rvl">
+                  <h3>
+                    Clean + Clear
+                  </h3>
+                </div>
+                <div class="rvl">
+                  <h2>
+                    HYDRAFACIAL
+                  </h2>
+                </div>
+
+                <div class="col-container">
+                  <div class="col-item">
+                    <div class="col-content">
+                      <p>
+                        HydraFacial<sup>®</sup> is your skin-renewing powerhouse! This treatment uses powerful serums to cleanse and refresh your skin non-invasively. Treatments are relaxing and the results are positively gorgeous!
+                      </p>
+                    </div>
+  
+                    
+                    <div class="btn-container rvl">
+                      <a href="#schedulewithus" class="ui-btn">
+                          <span>Book Online</span>  
+                          <div class="icon">
+                            <img src="img/arrow.svg" alt="arrow">
+                          </div>  
+                      </a>
+                    </div>
+                  </div>
+  
+                  <div class="col-item">
+                    <div class="col-content">
+                      <div class="swiper mySwiper2 slide-container" slidesPerGroup="1">
+                        <div class="swiper-wrapper slide-content">
+                            <div class="swiper-slide card" >
+                                <div class="card-content">
+                                  <div class="number">
+                                    <span>1</span>
+                                  </div>
+                                  <h3> 
+                                    Cleanse Peel
+                                  </h3>
+                                    <p>
+                                      Exolifate and uncover a new layer of skin
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="swiper-slide card" >
+                              <div class="card-content">
+                                <div class="number">
+                                  <span>1</span>
+                                </div>
+                                <h3> 
+                                  Cleanse Peel
+                                </h3>
+                                  <p>
+                                    Exolifate and uncover a new layer of skin
+                                  </p>
+                              </div>
+                          </div>
+
+                          <div class="swiper-slide card" >
+                            <div class="card-content">
+                              <div class="number">
+                                <span>1</span>
+                              </div>
+                              <h3> 
+                                Cleanse Peel
+                              </h3>
+                                <p>
+                                  Exolifate and uncover a new layer of skin
+                                </p>
+                            </div>
+                        </div>
+                        </div>
+                        <!-- <div class="swiper-button-next"></div> -->
+                        <div class="swiper-pagination"></div>
+                      </div>
+                    </div>
+  
+                    
+                    <div class="btn-container rvl">
+                      <a href="#schedulewithus" class="ui-btn">
+                          <span>Book Online</span>  
+                          <div class="icon">
+                            <img src="img/arrow.svg" alt="arrow">
+                          </div>  
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+
+              </div>
+
+          </div>
+        </section>
+
 
 
         <section class="textblock">
