--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
                     </picture>
                   </div>
 
-                  <div class="text-wrap">
+                  <div class="text-wrap text-top">
                     <h4>
                       COCONUT WATER – FOR HYDRATED 
                       RADIANT SKIN
@@ -782,10 +782,10 @@
                     </p>
 
                     <div class="btn-container rvl">
-                      <a href="#schedulewithus" class="ui-btn">
+                      <a href="#schedulewithus" class="ui-btn ui-btn-small-white">
                           <span>READ MORE</span>  
                           <div class="icon">
-                            <img src="img/arrow.svg" alt="arrow">
+                            <img src="img/arrow-blue.svg" alt="arrow">
                           </div>  
                       </a>
                     </div>
@@ -807,12 +807,12 @@
                         <p>Issued November 2nd, 2022</p>
                       </span>
 
-                      <p>
+                      <p class="article-text">
                         Faking a tan is far easier than you think and with this guide, you’ll be streak-less and orange-free.
                       </p>
 
                       <div class="btn-container rvl">
-                        <a href="#schedulewithus" class="ui-btn">
+                        <a href="#schedulewithus" class="ui-btn ui-btn-small">
                             <span>READ MORE</span>  
                             <div class="icon">
                               <img src="img/arrow.svg" alt="arrow">
@@ -837,12 +837,12 @@
                         <p>Issued November 2nd, 2022</p>
                       </span>
 
-                      <p>
+                      <p class="article-text">
                         Oh, the joy of trying to apply sunscreen to your littles. I get it— it’s hard chasing them around to try to smear…
                       </p>
 
                       <div class="btn-container rvl">
-                        <a href="#schedulewithus" class="ui-btn">
+                        <a href="#schedulewithus" class="ui-btn ui-btn-small">
                             <span>READ MORE</span>  
                             <div class="icon">
                               <img src="img/arrow.svg" alt="arrow">
@@ -867,12 +867,12 @@
                         <p>Issued November 2nd, 2022</p>
                       </span>
 
-                      <p>
+                      <p class="article-text">
                         We understand the science of skin and can create the optimum skincare regimen for rosacea,…
                       </p>
 
                       <div class="btn-container rvl">
-                        <a href="#schedulewithus" class="ui-btn">
+                        <a href="#schedulewithus" class="ui-btn ui-btn-small">
                             <span>READ MORE</span>  
                             <div class="icon">
                               <img src="img/arrow.svg" alt="arrow">
