header in progress mobile

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
     <!-- header -->
     <header id="header-container">
         <section class="nav-container">
-            <!-- <div class="logo">
+            <div class="logo-main">
                 <figure class="logo">
                     <a href="<?= get_site_url(); ?>/" class="link-logo">
                         <picture>
-                            <source type="image/svg+xml" srcset="img/turner-medical-arts-logo.svg">
-                            <img src="img/turner-medical-arts-logo.svg" alt="Turner Medical Arts" class="" width="174" height="58">
+                            <source type="image/svg+xml" srcset="img/lifted-logo.svg">
+                            <img src="img/lifted-logo.svg" alt="Lifted Beauty + Wellness" class="" width="174" height="58">
                         </picture>
                     </a>
                 </figure>
-            </div> -->
+            </div>
             <nav class="navdiv" aria-label="main navigation" role="navigation">
                 <span class="closebutton menu-button">
                     <div class="bars" aria-label="menu" aria-haspopup="true" aria-expanded="false" tabindex="0"
@@ -171,7 +171,7 @@
                                   <a href="<?= get_site_url(); ?>/" class="link-logo">
                                       <picture>
                                           <source type="image/svg+xml" srcset="img/lifted-logo.svg">
-                                          <img src="img/lifted-logo.svg" alt="Turner Medical Arts" class="" width="174" height="58">
+                                          <img src="img/lifted-logo.svg" alt="Lifted Beauty + Wellness" class="" width="174" height="58">
                                       </picture>
                                   </a>
                               </figure>
@@ -379,7 +379,7 @@
                   <a href="#schedulewithus" class="ui-btn ui-btn-white">
                       <span>Learn More</span>  
                       <div class="icon">
-                        <img src="img/arrow.svg" alt="arrow">
+                        <img src="img/arrow-blue.svg" alt="arrow">
                       </div>  
                   </a>
                 </div>
