--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                             <!-- menu item -->
                             <li role="menuitem" class="menu-item hasdropdown ">
-                                <a href="<?= get_site_url(); ?>/about/" class="menulink">
+                                <a href="#" class="menulink">
                                     <span class="menutext">
                                       ABOUT US
                                     </span>
@@ -333,7 +333,7 @@
         <section class="sculptsure">
           <div class="container">
               <div class="content">
-                  <div class="left-col">
+                  <div class="left-col fade-right-stop">
                     <picture class="">
                       <source media="(min-width: 576px)" srcset="img/sculptsure@2x.png">
                       <img src="img/sculptsure@2x.png" alt="Fit woman in active clothes" class="pic"> 
@@ -450,7 +450,7 @@
                     Team
                   </h2>
                 </div>
-                <div class="slider-container">
+                <div class="slider-container rvl">
                   <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
   
@@ -705,7 +705,7 @@
                     SKINCARE
                   </h2>
                 </div>
-                <div class="slider-container">
+                <div class="slider-container fade-up-stop">
                   <div class="swiper mySwiper3">
                     <div class="swiper-wrapper">
   
@@ -898,7 +898,7 @@
         <section class="article">
           <div class="container">
               <div class="content">
-                <div class="col-item">
+                <div class="col-item fade-right-stop">
                   <div class="img-wrapper">
                     <picture class="">
                       <source media="(min-width: 576px)" srcset="img/blogs-bg@2x.jpg">
@@ -1049,7 +1049,7 @@
                   </h2>
                 </div>
 
-                <div class="col-container">
+                <div class="col-container fade-up-stop">
                   <div class="item-col">
                     <div class="col-content">
                       <div class="icon-wrapper-qoute">
