--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                             <!-- menu item -->
                             <li role="menuitem" class="menu-item hasdropdown ">
-                                <a href="#" class="menulink">
+                                <a href="<?= get_site_url(); ?>/about/" class="menulink">
                                     <span class="menutext">
                                       ABOUT US
                                     </span>
