--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head itemscope itemtype="http://schema.org/WebSite">
     <meta charset="UTF-8" />
 
-    <title>Title</title>
+    <title>Lifted Beauty</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -25,8 +25,7 @@
     <!-- WPHEAD -->
     <!-- Main Styles -->
     <link rel="stylesheet" href="public/frontend.css">
-    <link rel="stylesheet" href="public/frontend.css">
-    <link rel="stylesheet" href="https://use.typekit.net/vvv0zzy.css">
+    <link rel="stylesheet" href="https://use.typekit.net/vnf0lgc.css">
     <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
@@ -304,7 +303,7 @@
                 </div>
             </div>
             <div class="arrow-btn">
-              <a href="#">
+              <a href="#sculptsure">
                 <svg xmlns="http://www.w3.org/2000/svg" width="33.139" height="27.877" viewBox="0 0 33.139 27.877">
                   <path id="Path_1" data-name="Path 1" d="M975.6,1021.137l15.1,21.922,13.865-21.922" transform="translate(-973.54 -1019.718)" fill="none" stroke="#fff" stroke-width="5" opacity="0.999"/>
                 </svg>                
@@ -330,7 +329,7 @@
             </div>
         </section>
 
-        <section class="sculptsure">
+        <section class="sculptsure" id="sculptsure">
           <div class="container">
               <div class="content">
                   <div class="left-col fade-right-stop">
