--- a/index.html
+++ b/index.html
@@ -521,7 +521,6 @@
               <div class="slider swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="slide-inner">
-                        <!-- <img src="https://html.nkdev.info/piroll/assets/images/home-6-1.jpg" alt="home"> -->
                           <picture>
                             <source media="(min-width: 576px)" srcset="img/welcome@2x.jpg">
                             <img src="img/welcome@2x.jpg" alt="" class="pic">
@@ -544,13 +543,9 @@
 
                 <div class="swiper-slide next-slider">
                     <div class="slide-inner">
-                        <!-- <img src="https://html.nkdev.info/piroll/assets/images/home-6-1.jpg" alt="home"> -->
                           <picture>
                             <source media="(min-width: 576px)" srcset="img/welcome-2@2x.jpg">
-                            <img src="img/welcome-2@2x.jpg" alt="" class="pic" style="@media screen and (max-width: 992px) {
-                              opacity: 0.3;
-                              object-fit: right;
-                            }">
+                            <img src="img/welcome-2@2x.jpg" alt="" class="pic">
                           </picture>
                     </div>
 
